ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-08-17 Benedikt Heintel
	- TOOLS:
		* Updated Squirrelmail to version 1.4.20RC1

2009-08-14 Malte Geierhos
	- SETUP: 
		* Fixed various Bugs preventing RPM Builds ( together with George Machitidze) 

2009-08-12 Sebastian Sellmeier
	- GUI:
		* Fixed #1922: Creating User with Domain expire 'never' does not work

2009-08-12 Jochen Manz
	- GUI:
		* Fixed #1881: Webmail button is not disabled when domain has mail disabled

2009-08-11 Thomas Wacker
	- GUI:
		* Fixed #1918: Can't delete an Admin- or Reselleraccount

2009-08-11 Andreca Daniel
	- TOOLS:
		* Fixed #1920 Error while installing snapshot 08/11/2009
		* Fixed #1919 Error in webmail

2009-08-09 Benedikt Heintel
	- ENGINE:
		* Added #1889: missing change
		* Changed messager to messenger

2009-08-09 Thomas Wacker
	- CONFIGS:
		* Fixed #1889: Fix fcgi 500 server errors

2009-08-08 Andreca Daniel
	- TOOLS:
		* Fixed #1916: class.HTMLPurifier_AttrDef_HTML_Class.php missing
	- CONFIGS:
		* Debian Squeeze need dash compatibility

2009-08-08 Benedikt Heintel
	- DEAMON:
		* Changed Layout of ispCP Network starter
	- TOOLS:
		* Updated HTMLPurifier to version 4.0.0
		* Updated Squirrelmail to version 1.4.19
		* Updated NET_DNS to version 1.16

2009-08-05 Thomas Wacker
	- GUI:
		* Fixed #1856: DOM 2 style sheets for dns entries

2009-08-04 Benedikt Heintel
	- CONFIGS:
		* Fixed #1877: Sending 2 Mails to the Forwarding List.
	- ENGINE:
		* Fixed #1861: DNS zone's records
	- GUI:
		* Fixed #1913: Error in your SQL syntax -> /gui/client/sql_user_add.php
		* Fixed #1914: No translation in reseller/gui/domain_edit.php

2009-07-30 Laurent Declercq
	- CONFIGS:
		* Fixed #1725: /var/log/rkhunter.log not readable

2009-07-29 Laurent Declercq
	- CONFIGS:
		* Fixed AuthOrder: "warning: module 'mod_sql_mysql.c' has no auth handlers"
	- GUI:
		* admin/reseller_statistics.tpl - repositioning of the message

2009-07-28 Laurent Declercq
	- CONFIGS: