@@ -2,6 +2,8 @@ ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2009-08-17 Benedikt Heintel
+	- GUI:
+		* Chagend recalc_reseller_c_props with Thomas Partsch's version
 	- TOOLS:
 		* Updated Squirrelmail to version 1.4.20RC1
 
